--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "mysql": "^2.18.1",
     "pug": "^3.0.2"
   }
 }
